# ts-django2

./: .env.dev  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
product/: Dockerfile  urls.py  views.py
product/templates/: base.html  nav.html
product/templates/product/: category.html  create.html  create_category.html  product.html
ts_django2/: asgi.py  settings.py  urls.py  wsgi.py
