[tool.poetry]
name = "atividade2505"
version = "0.1.0"
description = ""
authors = ["Victor Hugo <victorblog410@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.3"
python-decouple = "^3.4"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
